@@ -22,6 +22,7 @@ function __autoload($className) {
 		'TurckBagOStuff' => 'includes/BagOStuff.php',
 		'APCBagOStuff' => 'includes/BagOStuff.php',
 		'eAccelBagOStuff' => 'includes/BagOStuff.php',
+		'XCacheBagOStuff' => 'includes/BagOStuff.php',
 		'DBABagOStuff' => 'includes/BagOStuff.php',
 		'Block' => 'includes/Block.php',
 		'HTMLFileCache' => 'includes/HTMLFileCache.php',
